...
    BuildContext context,
    WidgetRef ref,
  ) async {
    final result = await showDialog<String>(
      context: context,
      builder: (dialogContext) => SimpleDialog(
        title: const Text('Type d\'ajustement'),
        children: [
          SimpleDialogOption(
            onPressed: () => Navigator.of(dialogContext).pop('RECEPTION'),
            child: const Row(
              children: [
                Icon(Icons.move_to_inbox, color: Colors.green),
                SizedBox(width: 16),
                Text('Ajustement sur Réception'),
              ],
            ),
          ),
          SimpleDialogOption(
            onPressed: () => Navigator.of(dialogContext).pop('SORTIE'),
            child: const Row(
...
