...
                        vertical: 8,
                      ),
                      child: Row(
                        children: const [
                          Expanded(flex: 14, child: Text('Date chargement')),
                          Expanded(flex: 24, child: Text('Fournisseur')),
                          Expanded(flex: 14, child: Text('Volume')),
                          Expanded(flex: 18, child: Text('Produit')),
                          Expanded(flex: 10, child: Text('Origine')),
                          Expanded(flex: 18, child: Text('Transporteur')),
                          Expanded(flex: 14, child: Text('Chauffeur')),
                          Expanded(flex: 12, child: Text('Plaque')),
                        ],
...
